; ModuleID = '/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_pname.c_uu_alt_exit.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_pname.c_uu_alt_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_SUCCESS = common dso_local global i32 0, align 4
@uu_exit_ok_value = common dso_local global i32 0, align 4
@EXIT_FAILURE = common dso_local global i32 0, align 4
@uu_exit_fatal_value = common dso_local global i32 0, align 4
@uu_exit_usage_value = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uu_alt_exit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %9 [
    i32 129, label %4
    i32 128, label %7
  ]

4:                                                ; preds = %1
  %5 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %5, i32* @uu_exit_ok_value, align 4
  %6 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %6, i32* @uu_exit_fatal_value, align 4
  store i32 2, i32* @uu_exit_usage_value, align 4
  br label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %8, i32* @uu_exit_ok_value, align 4
  store i32 124, i32* @uu_exit_fatal_value, align 4
  store i32 125, i32* @uu_exit_usage_value, align 4
  br label %9

9:                                                ; preds = %1, %7, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
